--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -7,6 +7,11 @@
         android:title="Products"
         app:showAsAction="always"></item>
     <item
+        android:id="@+id/menuCategories"
+        android:icon="@drawable/ic_baseline_category_24"
+        android:title="Category"
+        app:showAsAction="always"></item>
+    <item
         android:id="@+id/menuOrders"
         android:icon="@drawable/baseline_shopping_cart_24"
         android:title="Order"
@@ -16,6 +21,7 @@
         android:icon="@drawable/ic_baseline_person_24"
         android:title="Customer"
         app:showAsAction="always"></item>
+
 
 
 
