--- a/app/src/main/res/layout/activity_create_product.xml
+++ b/app/src/main/res/layout/activity_create_product.xml
@@ -35,6 +35,14 @@
                 android:text="Name :" />
 
             <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Category :" />
+
+            <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -73,6 +81,14 @@
                 android:ems="10"
                 android:hint="Name"
                 android:inputType="textPersonName" />
+
+            <Spinner
+                android:id="@+id/spnCate"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:ems="10"
+                />
 
             <EditText
                 android:id="@+id/edtCreateDes"
