--- a/app/src/main/res/layout/fragment_customers.xml
+++ b/app/src/main/res/layout/fragment_customers.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.CustomersFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcl_customer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Customer" />
+        android:layout_height="500dp" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btnLogOutAdmin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout" />
+
+</LinearLayout>
