--- a/app/src/main/res/layout/fragment_infomation.xml
+++ b/app/src/main/res/layout/fragment_infomation.xml
@@ -19,7 +19,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
@@ -76,5 +76,11 @@
                 android:text="TextView" />
         </LinearLayout>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnLogoutUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Đăng xuất" />
 
 </LinearLayout>
