--- a/app/src/main/res/layout/activity_update_category.xml
+++ b/app/src/main/res/layout/activity_update_category.xml
@@ -56,5 +56,5 @@
         android:id="@+id/btnUpdateCate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Create" />
+        android:text="Update" />
 </LinearLayout>
